# ARbot_Simulink

./: arbot_v2.slxc  martin_arbot_v3.slxc
ARbot_Simulink_v1/Arbot_NoConveyor_v1/: README.md  arbot_v1.slx  arbot_v1.slx.autosave  arbot_v1.slxc
ARbot_Simulink_v2/: New_Export.mat  arbot_v1.slx.original  arbot_v1.slxc  guard.slx.autosave  guard_DataFile1.m
AppDesigner/: ARbot_Sim_Interface_v0.mlapp  ARbot_Sim_Interface_v0_input.mlapp  ARbot_Sim_Interface_v0_output.mlapp  app_designer_model.slx  app_designer_model.slxc  app_designer_model_martin.slx  app_designer_model_martin.slxc  arbot_app_designer_v1.slxc  init_root_paths.m  init_root_paths.m~  startup_appdesigner.m  startup_appdesigner.m~  user_inputs.mat
AppDesigner/Reports/: 30_1_1.129500e+00.csv
slprj/_jitprj/: jitEngineAccessInfo.mat  sftSEKBR3zWw1VOf9ZHQRM.l  sftSEKBR3zWw1VOf9ZHQRM.mat
v1/: README.md
v2/: arbot_v2.slxc
v2/Suction/Rev1_Patch/description/ARbot_V1_4Export_5/: CMakeLists.txt  package.xml
v2/Suction/Rev1_Patch/description/ARbot_V1_4Export_5/urdf/: ARbot_V1_4Export_5.urdf
v2beta/: IK_look_up_array.mat  arbot_app_designer_v1.slxc  arbot_v2.slxc  arbot_v2beta.slx  arbot_v2beta.slxc  user_inputs.mat
v2offset/: init_root_paths.m  martin_arbot_v3.slxc
v3/: init_root_paths.m  init_root_paths_mac.m  init_root_paths_windows.m  martin_arbot_v2offset.slx  martin_arbot_v2offset.slxc  martin_arbot_v3.slx  martin_arbot_v3.slxc  user_inputs.mat  viet_HC_arbot_v2offset.slx  viet_HC_arbot_v3.slx  viet_HC_arbot_v3.slx.autosave  viet_HC_arbot_v3.slxc  viet_LC_arbot_v3.slx  viet_LC_arbot_v3.slxc
(+2219 files in other folders)
